--- a/_posts/2015-09-06-2015年9月第二周工作清单.md
+++ b/_posts/2015-09-06-2015年9月第二周工作清单.md
@@ -5,6 +5,7 @@ date:   2015-09-06 09:02:53
 categories: work study
 ---
 #九月份任务：
+***
 * 阅读任务：
 	* [《算法导论》](/assets/Introduction to Algorithms.pdf)第一部分
 	* 《数学之美》搜索部分看完
@@ -14,4 +15,4 @@ categories: work study
 * OJ：
 	* [leecode](https://leetcode.com/) OJ 5道
 * 实验室：
-	* 西门子专利（'DeadLine 9/10'）
+	* 西门子专利（*DeadLine 9/10*）
