--- a/_posts/2015-08-29-sublime2.md
+++ b/_posts/2015-08-29-sublime2.md
@@ -2,7 +2,8 @@
 layout: post
 title: sublime build 2221 注册码
 data: 2015-09-28 17:38:00
-category: tool
+category: coding
+tags: tools
 ---
 #sublime2 注册码
 
