--- a/_posts/2015-09-06-201509work.md
+++ b/_posts/2015-09-06-201509work.md
@@ -2,7 +2,8 @@
 layout: post
 title: "2015年9月第二周工作清单"
 date:   2015-09-06 09:02:53
-categories: work study
+categories: schedule
+tags: work study
 ---
 
 #九月份任务：
