--- a/_posts/2015-09-23-0923work.md
+++ b/_posts/2015-09-23-0923work.md
@@ -2,7 +2,8 @@
 layout: post
 title: "2015年9月23号 work"
 date:   2015-09-23 09:02:53
-categories: work study
+categories: schedule
+tags: work study
 ---
 
 * 08：40到达实验室
