--- a/_posts/2015-09-28-work.md
+++ b/_posts/2015-09-28-work.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2015年9月28号 work"
 date:   2015-09-28 09:02:53
-categories: sche
+categories: schedule
 tags: work study
 ---
 * 11111
